Sets up NuGet deployments

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,8 +6,23 @@ install:
   - dnu restore
 build:
   verbosity: minimal
+after_build:
+  - cd src/CoreJwt
+  - dnu pack --configuration Release
+  - cd ../..
+artifacts:
+  - path: src/CoreJwt/bin/Release/*.nupkg
 test: off
 test_script:
   - cd test/CoreJwt.test
   - dnx test
   - cd ../..
+deploy:
+  provider: NuGet
+  api_key: 
+    secure: cKw8uYyXfNxiKR6S+3J3pD3H+KOlGzSWJwpQIUnjqMNlLDTdnFqplvAW6T4drALY+I9ddo73i5LHscXLuKetXHaI/NJcrrDbwiLA1NpGcEc=
+  skip_symbols: true
+  artifact: src/CoreJwt/bin/Release/*.nupkg
+  on: 
+    branch: master
+	appveyor_repo_tag: true
