Testing appveyor nuget deploy

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,8 +20,7 @@ test_script:
 deploy:
   provider: NuGet
   api_key: 
-    secure: cKw8uYyXfNxiKR6S+3J3pD3H+KOlGzSWJwpQIUnjqMNlLDTdnFqplvAW6T4drALY+I9ddo73i5LHscXLuKetXHaI/NJcrrDbwiLA1NpGcEc=
-  skip_symbols: true
+    secure: pqyniO3msSvllt6BvwOfU7EFvG8RmvIFAQoVsqCm3whUB7GICrSNa7Ko2gysmij0
   on: 
     branch: master
-    appveyor_repo_tag: true
+    #appveyor_repo_tag: true
